--- a/newlib/libc/reent/Makefile.in
+++ b/newlib/libc/reent/Makefile.in
@@ -57,7 +57,7 @@ lib_a_AR = $(AR) $(ARFLAGS)
 lib_a_LIBADD =
 am__objects_1 = lib_a-closer.$(OBJEXT) lib_a-reent.$(OBJEXT) \
 	lib_a-impure.$(OBJEXT) lib_a-fcntlr.$(OBJEXT) \
-	lib_a-fstatr.$(OBJEXT) lib_a-getreent.$(OBJEXT) \
+	lib_a-fstatr.$(OBJEXT) lib_a-getpidr.$(OBJEXT) lib_a-getreent.$(OBJEXT) \
 	lib_a-gettimeofdayr.$(OBJEXT) lib_a-isattyr.$(OBJEXT) \
 	lib_a-linkr.$(OBJEXT) lib_a-lseekr.$(OBJEXT) \
 	lib_a-mkdirr.$(OBJEXT) lib_a-openr.$(OBJEXT) \
@@ -83,7 +83,7 @@ lib_a_OBJECTS = $(am_lib_a_OBJECTS)
 LTLIBRARIES = $(noinst_LTLIBRARIES)
 libreent_la_LIBADD =
 am__objects_6 = closer.lo reent.lo impure.lo fcntlr.lo fstatr.lo \
-	getreent.lo gettimeofdayr.lo isattyr.lo linkr.lo lseekr.lo \
+	getpidr.lo getreent.lo gettimeofdayr.lo isattyr.lo linkr.lo lseekr.lo \
 	mkdirr.lo openr.lo readr.lo renamer.lo signalr.lo signgam.lo \
 	sbrkr.lo statr.lo timesr.lo unlinkr.lo writer.lo
 @HAVE_STDIO64_DIR_TRUE@am__objects_7 = fstat64r.lo lseek64r.lo \
@@ -286,6 +286,7 @@ GENERAL_SOURCES = \
 	impure.c \
 	fcntlr.c \
 	fstatr.c \
+	getpidr.c \
 	getreent.c \
 	gettimeofdayr.c \
 	isattyr.c \
@@ -317,6 +318,7 @@ CHEWOUT_FILES = \
 	execr.def \
 	fcntlr.def \
 	fstatr.def \
+	getpidr.def \
 	gettimeofdayr.def \
 	linkr.def \
 	lseekr.def \
@@ -433,6 +435,12 @@ lib_a-fstatr.o: fstatr.c
 
 lib_a-fstatr.obj: fstatr.c
 	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(lib_a_CFLAGS) $(CFLAGS) -c -o lib_a-fstatr.obj `if test -f 'fstatr.c'; then $(CYGPATH_W) 'fstatr.c'; else $(CYGPATH_W) '$(srcdir)/fstatr.c'; fi`
+
+lib_a-getpidr.o: getpidr.c
+	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(lib_a_CFLAGS) $(CFLAGS) -c -o lib_a-getpidr.o `test -f 'getpidr.c' || echo '$(srcdir)/'`getpidr.c
+
+lib_a-getpidr.obj: getpidr.c
+	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(lib_a_CFLAGS) $(CFLAGS) -c -o lib_a-getpidr.obj `if test -f 'getpidr.c'; then $(CYGPATH_W) 'getpidr.c'; else $(CYGPATH_W) '$(srcdir)/getpidr.c'; fi`
 
 lib_a-getreent.o: getreent.c
 	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(lib_a_CFLAGS) $(CFLAGS) -c -o lib_a-getreent.o `test -f 'getreent.c' || echo '$(srcdir)/'`getreent.c
