--- a/newlib/libc/sys/nacl/Makefile.am
+++ b/newlib/libc/sys/nacl/Makefile.am
@@ -8,7 +8,7 @@ AM_CCASFLAGS = $(INCLUDES)
 
 noinst_LIBRARIES = lib.a
 
-lib_a_SOURCES = dummysys.c
+lib_a_SOURCES = dummysys.c aeabi_atexit.c
 lib_a_CCASFLAGS = $(AM_CCASFLAGS)
 lib_a_CFLAGS = $(AM_CFLAGS)
 
