newlib: Don't use -fshort-enums
The upstream newlib build uses -fshort-enums for a few files.  This
is intended to reduce code size, and it's harmless because the enums
affected are not used in at any ABI boundaries, just inside private
functions.  But on ARM, using -fshort-enums marks an object with
attributes saying it's using a non-default ABI and the linker warns
about mixing objects with and without -fshort-enums.  The possible
performance/code-size benefit of -fshort-enums is negligible in the
NaCl context, and it's more important that SDK users not get these
confusing warnings at link time.  Some unrelated whitespace/filling
changes appear as fallout from re-running Automake.

BUG= http://code.google.com/p/nativeclient/issues/detail?id=3193
TEST= none

Change-Id: I844aa8a2bebb43a8660dd7e316eaeebd3c0c574d

--- a/newlib/libc/stdio/Makefile.am
+++ b/newlib/libc/stdio/Makefile.am
@@ -181,32 +181,34 @@ endif # USE_LIBTOOL
 
 include $(srcdir)/../../Makefile.shared
 
+#CFLAGS_enums = -fshort-enums
+
 # This rule is needed so that libtool compiles vfiprintf before vfprintf. Otherwise
 # libtool moves vfprintf.o and subsequently can't find it.
 
 $(lpfx)vfprintf.$(oext): vfprintf.c
-	$(LIB_COMPILE) -fshort-enums -c $(srcdir)/vfprintf.c -o $@
+	$(LIB_COMPILE) $(CFLAGS_enums) -c $(srcdir)/vfprintf.c -o $@
 
 $(lpfx)vfiprintf.$(oext): vfprintf.c
-	$(LIB_COMPILE) -fshort-enums -DINTEGER_ONLY -c $(srcdir)/vfprintf.c -o $@
+	$(LIB_COMPILE) $(CFLAGS_enums) -DINTEGER_ONLY -c $(srcdir)/vfprintf.c -o $@
 
 $(lpfx)svfprintf.$(oext): vfprintf.c
-	$(LIB_COMPILE) -fshort-enums -DSTRING_ONLY -c $(srcdir)/vfprintf.c -o $@
+	$(LIB_COMPILE) $(CFLAGS_enums) -DSTRING_ONLY -c $(srcdir)/vfprintf.c -o $@
 
 $(lpfx)svfiprintf.$(oext): vfprintf.c
-	$(LIB_COMPILE) -fshort-enums -DINTEGER_ONLY -DSTRING_ONLY -c $(srcdir)/vfprintf.c -o $@
+	$(LIB_COMPILE) $(CFLAGS_enums) -DINTEGER_ONLY -DSTRING_ONLY -c $(srcdir)/vfprintf.c -o $@
 
 $(lpfx)vfwprintf.$(oext): vfwprintf.c
-	$(LIB_COMPILE) -fshort-enums -c $(srcdir)/vfwprintf.c -o $@
+	$(LIB_COMPILE) $(CFLAGS_enums) -c $(srcdir)/vfwprintf.c -o $@
 
 $(lpfx)vfiwprintf.$(oext): vfwprintf.c
-	$(LIB_COMPILE) -fshort-enums -DINTEGER_ONLY -c $(srcdir)/vfwprintf.c -o $@
+	$(LIB_COMPILE) $(CFLAGS_enums) -DINTEGER_ONLY -c $(srcdir)/vfwprintf.c -o $@
 
 $(lpfx)svfwprintf.$(oext): vfwprintf.c
-	$(LIB_COMPILE) -fshort-enums -DSTRING_ONLY -c $(srcdir)/vfwprintf.c -o $@
+	$(LIB_COMPILE) $(CFLAGS_enums) -DSTRING_ONLY -c $(srcdir)/vfwprintf.c -o $@
 
 $(lpfx)svfiwprintf.$(oext): vfwprintf.c
-	$(LIB_COMPILE) -fshort-enums -DINTEGER_ONLY -DSTRING_ONLY -c $(srcdir)/vfwprintf.c -o $@
+	$(LIB_COMPILE) $(CFLAGS_enums) -DINTEGER_ONLY -DSTRING_ONLY -c $(srcdir)/vfwprintf.c -o $@
 
 $(lpfx)vfscanf.$(oext): vfscanf.c
 	$(LIB_COMPILE) -c $(srcdir)/vfscanf.c -o $@
