--- a/newlib/libc/stdlib/Makefile.in
+++ b/newlib/libc/stdlib/Makefile.in
@@ -477,7 +477,7 @@ CHEWOUT_FILES = \
 	wcstoull.def 	\
 	system.def	\
 	wcstombs.def	\
-	wctomb.def	
+	wctomb.def
 
 SUFFIXES = .def
 CHEW = ../../doc/makedoc -f $(srcdir)/../../doc/doc.str
@@ -1403,11 +1403,13 @@ $(lpfx)malloptr.$(oext): mallocr.c
 doc: $(CHEWOUT_FILES)
 	cat $(srcdir)/stdlib.tex >> $(TARGETDOC)
 
+#CFLAGS_enums = -fshort-enums
+
 $(lpfx)dtoa.$(oext): dtoa.c mprec.h
 $(lpfx)ldtoa.$(oext): ldtoa.c mprec.h
 $(lpfx)ecvtbuf.$(oext): ecvtbuf.c mprec.h
 $(lpfx)mbtowc_r.$(oext): mbtowc_r.c mbctype.h
-	$(LIB_COMPILE) -c -fshort-enums $(srcdir)/mbtowc_r.c -o $@
+	$(LIB_COMPILE) -c $(CFLAGS_enums) $(srcdir)/mbtowc_r.c -o $@
 
 $(lpfx)mprec.$(oext): mprec.c mprec.h
 $(lpfx)strtod.$(oext): strtod.c mprec.h
